--- a/vues_css/dashboard-view.css
+++ b/vues_css/dashboard-view.css
@@ -403,13 +403,38 @@ table td:nth-child(7){
     margin-top: 30px;
 }
 
-.first-step span{
+.step {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #7d80885d;
+}
+
+.step span{
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 100%;
     width: 35px;
     height: 35px;
+    background-color: #7d80885d;
+    color: #ffffff5d;
+}
+
+.step div h2{
+    margin-left: 25px;
+}
+
+.arrow-icon-bloc{
+    margin-top: 8px;
+    transform: scale(0.6);
+}
+
+.active-step{
+    color: #2699FB;
+}
+
+.active-step span{
     background-color: #2699FB;
     color: #ffffff;
 }
