--- a/vues_css/classes_view.css
+++ b/vues_css/classes_view.css
@@ -161,6 +161,7 @@ body{
     height: 87%;
     border-top-left-radius: 18px;
     border-bottom-left-radius: 18px;
+    position: relative;
 }
 
 button{
@@ -200,7 +201,13 @@ button{
     color: #ffffff;
 }
 
+.main-bloc{
+    position: absolute;
+    z-index: 1;
+}
+
 .second-area{
+    
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -211,11 +218,13 @@ button{
     height: 680px;
     /*background-color: #4b9dc315;*/
     border-radius: 40px;
+    z-index: -1;
 }
 
 
 
 .card-bloc{
+    
     
     display: flex;
     justify-content: center;
@@ -300,3 +309,159 @@ button{
     margin-left: 150px;
 }
 
+/*css de la modale*/
+
+.modal-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    position: fixed;
+    z-index: 3;
+    margin: auto;
+    top: 16;
+    width: 85.1%;
+    height: 86.5%;
+    border-top-left-radius: 18px;
+    border-bottom-left-radius: 18px;
+    /*opacity: 0%;*/
+    transition: visibility 0.5s, opacity 0.4s;
+}
+
+.modal-container.active-modal {
+    visibility: visible;
+    opacity: 100%;
+    transition: visibility 0s;
+}
+
+.overlay{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 18px;
+    border-bottom-left-radius: 18px;
+    background-color: #f0f4f9ae;
+    /*background-color: #89292913*/
+}
+
+.modal-content-bloc{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
+    z-index: 3;
+    width: 734px;
+    height: 660px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px 10px rgba(165, 165, 165, 0.036);
+    border-radius: 25px;
+}
+
+.close-button-area{
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+
+.close-button-area button{
+    transform: scale(0.5);
+    margin-right: 51px;
+    margin-top: 41px;
+    margin-bottom: 0px;
+}
+
+.form-title h1{
+    color: #2699FB;
+}
+
+.form-content{
+    margin-top: 30px;
+    width: 620px;
+    height: 100%;
+    /*background-color: #184A9B;*/
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.form-element{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: auto;
+    margin-top: auto;
+}
+
+label{
+    color: #7D8088;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+input[type=text] {
+    /*border: none;*/
+    border: 2px solid #2698fb64;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+    height: 53px;
+    width: 610px;
+    padding: 0px 5px;
+}
+
+::placeholder{
+    color: #7d80886c;
+    margin-bottom: 10px;
+    
+}
+
+input[type=text]:focus {
+
+    outline: none;
+    border: 2px solid #2699FB;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+
+}
+
+input[value=""]{
+    color: #2699FB;
+    padding-left: 18px;
+}
+
+input[value=""]::selection{
+    background-color: #ffffff2c;
+}
+
+#btn-area{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#btn-area button img{
+    margin-top: 0px;
+    transform: scale(0.6);
+}
+
+.btn-denregistrement{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #2699FB;
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ffffff;
+    cursor: pointer;
+    touch-action: manipulation;
+    height: 50px;
+    width: 300px;
+}
