--- a/vues_css/dashboard-view.css
+++ b/vues_css/dashboard-view.css
@@ -224,7 +224,7 @@ button{
     /*background-color: #f9e9e9;*/
     border-radius: 40px;
     margin: 20px;
-   
+    
    
    
 }
@@ -284,7 +284,7 @@ tbody tr td{
 }
 
 .table-head{
-    background-color: #F0F4F9;
+    
     border-top-left-radius: 300px;
     border-top-right-radius: 300px;
 }
@@ -334,7 +334,7 @@ table td:nth-child(7){
     display: flex;
     justify-content: center;
     align-items: center;
-    /*visibility: hidden;*/
+    visibility: hidden;
     position: fixed;
     margin: auto;
     top: 16;
@@ -342,11 +342,11 @@ table td:nth-child(7){
     height: 86.5%;
     border-top-left-radius: 18px;
     border-bottom-left-radius: 18px;
-    /*opacity: 0%;*/
+    opacity: 0%;
     transition: visibility 0.5s, opacity 0.4s;
 }
 
-.modal-container.active {
+.modal-container.active-modal {
     visibility: visible;
     opacity: 100%;
     transition: visibility 0s;
@@ -359,7 +359,7 @@ table td:nth-child(7){
     height: 100%;
     border-top-left-radius: 18px;
     border-bottom-left-radius: 18px;
-    background-color: #f0f4f9b1;
+    background-color: #f0f4f9ae;
     /*background-color: #89292913*/
 }
 
@@ -437,4 +437,122 @@ table td:nth-child(7){
 .active-step span{
     background-color: #2699FB;
     color: #ffffff;
+}
+
+/* */
+
+.form-content{
+    margin-top: 30px;
+    width: 1168px;
+    height: 249px;
+    /*background-color: #184A9B;*/
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+}
+
+.form-element{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+    margin-right: 40px;
+}
+
+label{
+    color: #7D8088;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+input[type=text] {
+    /*border: none;*/
+    border: 2px solid #2698fb64;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+    height: 53px;
+    width: 502px;
+    padding: 0px 5px;
+}
+
+input[type=password] {
+    /*border: none;*/
+    border: 2px solid #2698fb9f;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+    height: 53px;
+    width: 502px;
+    padding: 0px 5px;
+}
+
+input[type=email] {
+    /*border: none;*/
+    border: 2px solid #2698fb9f;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+    height: 53px;
+    width: 502px;
+    padding: 0px 5px;
+}
+
+::placeholder{
+    color: #7d80886c;
+    margin-bottom: 10px;
+    
+}
+
+input[type=text]:focus {
+
+    outline: none;
+    border: 2px solid #2699FB;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+
+}
+
+input[type=password]:focus {
+
+    outline: none;
+    border: 2px solid #2699FB;
+    border-radius: 10px;
+    background-color: #9bb1d41e;
+
+}
+
+input[value=""]{
+    color: #2699FB;
+    padding-left: 18px;
+}
+
+input[value=""]::selection{
+    background-color: #ffffff2c;
+}
+
+#btn-area{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 45px;
+    margin-left: 800px;
+}
+
+#btn-area button img{
+    margin-top: 0px;
+    transform: scale(0.6);
+}
+
+.btn-denregistrement{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    /*background-color: #c2e6ff;*/
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-size: 25px;
+    font-weight: bold;
+    color: #2699FB;
+    cursor: pointer;
+    touch-action: manipulation;
+    height: 50px;
+    width: 200px;
 }
